# pysmlparser

./: .gitignore  get_data_bridge.sh  pyproject.toml  pysmlparser.py  sml2mqtt.yml
