[tool.poetry]
name = "pysmlparser"
version = "0.1.0"
description = "Parses SML messages and decodes them"
authors = ["Daniel Glaser <me@the78mole.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
smllib = "^1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
